<resources>
    <string name="app_name">androidProject</string>
    <string name="category">ประเภทอาหาร</string>
    <string name="menu">เมนู</string>
    <string name="vegetable">ผัก</string>
    <string name="Meat">เนื้อสัตว์</string>
    <string name="specific">ประเภท</string>
    <string name="food_allergies">วัตถุดิบที่แพ้</string>
    <string name="randomBtn">สุ่ม</string>
    <string name="food_random">สุ่มอาหาร</string>
    <string name="cooking_method">การปรุง</string>
    <string name="resultMenu">ผัดพริกเผากุ้ง</string>
    <string name="cal_value">%d แคลอรี่</string>
    <string name="cal">แคลอรี่</string>
    <string name="NoInfoNow">ยังไม่มีข้อมูลณะตอนนี้</string>
    <string name="list">รายการ</string>
    <string name="noodles">เส้น</string>
    <string name="water">น้ำ</string>
    <string name="other">วัตถุดิบอื่นๆ</string>
    <string name="back">กลับ</string>
    <string name="sum">รวมทั้งหมด</string>
    <string name="detail">รายละเอียด</string>
    <string name="title_activity_detail2">detailActivity2</string>
    <string name="save">บันทึก</string>
    <string name="time">เวลา</string>
    <string name="history">ประวัติ</string>
    <string name="fileName">history"</string>
    <string name="clear">ล้าง</string>
</resources>