<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="รายการพลังงานทั้งหมด"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:textColor="@color/black"
        android:id="@+id/foodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="อาหาร"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/result_menu_background"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/foodName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="80dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            >

            <TextView
                style="@style/CustomTextViewStyle"
                android:layout_height="match_parent"
                android:text="@string/list"
                android:textStyle="bold" />
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:textStyle="bold"
                style="@style/CustomTextViewStyle"
                android:text="@string/cal"/>
        </LinearLayout>
        <LinearLayout
            style="@style/CustomLinearLayoutList"
            >
            <TextView
                style="@style/CustomBigTextViewStyle"
                android:text="@string/menu"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/menuCal"
                style="@style/CustomBigTextViewStyle"
                android:text="@string/cal_value"/>
        </LinearLayout>
        <LinearLayout
            style="@style/CustomLinearLayoutList"
            >
            <TextView
                style="@style/CustomBigTextViewStyle"
                android:text="@string/Meat"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/meatCal"
                style="@style/CustomBigTextViewStyle"
                android:text="@string/cal_value"/>
        </LinearLayout>
        <LinearLayout
            style="@style/CustomLinearLayoutList"
            >
            <TextView
                style="@style/CustomBigTextViewStyle"
                android:text="@string/noodles"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/noodlesCal"
                style="@style/CustomBigTextViewStyle"
                android:text="@string/cal_value"/>
        </LinearLayout>
        <LinearLayout
            style="@style/CustomLinearLayoutList"
            >
            <TextView
                style="@style/CustomBigTextViewStyle"
                android:text="@string/water"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/waterCal"
                style="@style/CustomBigTextViewStyle"
                android:text="@string/cal_value"/>
        </LinearLayout>
        <LinearLayout
            style="@style/CustomLinearLayoutList"
            >
            <TextView
                style="@style/CustomBigTextViewStyle"
                android:text="@string/vegetable"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/vegetableCal"
                style="@style/CustomBigTextViewStyle"
                android:text="@string/cal_value"/>
        </LinearLayout>
        <LinearLayout
            style="@style/CustomLinearLayoutList"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/CustomBigTextViewStyle"
                    android:text="@string/other"/>
                <TextView
                    android:id="@+id/otherName"
                    style="@style/CustomTextViewStyle"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:text="@string/other"/>
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/otherCal"
                style="@style/CustomBigTextViewStyle"
                android:text="@string/cal_value"/>
        </LinearLayout>
        <LinearLayout
            style="@style/CustomLinearLayoutList"
            android:layout_marginTop="30dp"
            >
            <TextView
                style="@style/CustomTextViewStyle"
                android:text="@string/sum"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/sumCal"
                android:textStyle="bold"
                style="@style/CustomTextViewStyle"
                android:textColor="@color/textColorSecondary"
                android:textSize="24sp"
                android:text="@string/cal_value"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>